[gd_scene load_steps=7 format=3 uid="uid://c8j5veq3qxnvs"]

[ext_resource type="Script" path="res://scripts/email_enemy.gd" id="1_0yvnj"]
[ext_resource type="Texture2D" path="res://assets/images/email_enemy.png" id="2_yvnj2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(70, 60)

[sub_resource type="Animation" id="Animation_1"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.5, 0.5, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.8, 0.8, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1"]
_data = {
"hit": SubResource("Animation_1"),
"open": SubResource("Animation_2"),
"death": SubResource("Animation_2")
}

[node name="EmailEnemy" type="Area2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource("1_0yvnj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_yvnj2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1")
}

[node name="OpenTimer" type="Timer" parent="."]
one_shot = true

[node name="SubjectLabel" type="Label" parent="."]
offset_left = -35.0
offset_top = -40.0
offset_right = 35.0
offset_bottom = -20.0
text = "Subject"
horizontal_alignment = 1

[connection signal="timeout" from="OpenTimer" to="." method="_on_open_timer_timeout"]